<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.yourcompany</groupId>
  <artifactId>saucecucumberjvm</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>saucecucumberjvm</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>1.2.4</version>
    </dependency>
    
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-picocontainer</artifactId>
      <version>1.2.4</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-testng</artifactId>
      <version>1.2.4</version>
    </dependency>
    
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>2.53.0</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
		<groupId>com.saucelabs</groupId>
		<artifactId>saucerest</artifactId>
		<version>1.0.33</version>
	</dependency>
    
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.9.10</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-io</artifactId>
      <version>1.3.2</version>
    </dependency>

  </dependencies>
  
   <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                   <forkCount>6</forkCount>
                   <reuseForks>false</reuseForks>
                   <argLine>-Duser.language=en</argLine>
                   <argLine>-Xmx1024m</argLine>
                   <argLine>-XX:MaxPermSize=256m</argLine>
                   <argLine>-Dfile.encoding=UTF-8</argLine>
                   <useFile>false</useFile>
                   <includes>
                   	 <include>**/*AT.class</include>
                   </includes>
                   <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
              <artifactId>maven-resources-plugin</artifactId>
              <version>2.7</version>
              <executions>
                <execution>
                  <id>copy-resources</id>
                  <!-- here the phase you need -->
                  <phase>validate</phase>
                  <goals>
                    <goal>copy-resources</goal>
                  </goals>
                  <configuration>
                    <outputDirectory>target/test-classes/com/yourcompany/saucecucumberjvm</outputDirectory>
                    <resources>          
                      <resource>
                        <directory>src/test/resources</directory>
                        <filtering>true</filtering>
                      </resource>
                    </resources>              
                  </configuration>            
                </execution>
              </executions>
            </plugin>
        </plugins>
   </build>
   
</project>
